[gd_scene load_steps=10 format=2]

[ext_resource path="res://data/models/character-orc.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]

[sub_resource type="PrismMesh" id=5]
size = Vector3( 0.2, 0.5, 0.1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.443137, 0.784314, 1, 1 )

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 0.5

[sub_resource type="CylinderMesh" id=2]
top_radius = 2.1
bottom_radius = 2.1
height = 0.2
radial_segments = 32

[sub_resource type="SpatialMaterial" id=4]
params_blend_mode = 1
albedo_color = Color( 0.1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
params_blend_mode = 1
albedo_color = Color( 0, 0.027451, 0.105882, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Visuals" type="Spatial" parent="."]

[node name="character-orc" parent="Visuals" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )

[node name="Player1Arrow" type="CSGMesh" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0.169734, -0.739951 )
mesh = SubResource( 5 )
material = SubResource( 6 )

[node name="Player2Arrow" type="CSGMesh" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0.169734, -0.739951 )
visible = false
mesh = SubResource( 5 )
material = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="RegenerateRouteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Player1Highlight" type="CSGMesh" parent="."]
mesh = SubResource( 2 )
material = SubResource( 4 )

[node name="Player2Highlight" type="CSGMesh" parent="."]
visible = false
mesh = SubResource( 2 )
material = SubResource( 3 )

[connection signal="timeout" from="RegenerateRouteTimer" to="." method="_on_RegenerateRouteTimer_timeout"]
